# xpiano-ai-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/scripts/: gate.sh
.github/workflows/: hil-e2e-gate.yml
docs/: e2e-hil-plan.md  spec.md
scripts/: check_report_thresholds.py  e2e_hil_gate.sh
src/xpiano/: __init__.py  __main__.py  alignment.py  analysis.py  cli.py  config.py  display.py  events.py  llm_coach.py  llm_provider.py  measure_beat.py  midi_io.py  models.py  parser.py  playback.py  reference.py  report.py  schemas.py  wait_mode.py
tests/: conftest.py  test_alignment.py  test_analysis_report.py  test_cli.py  test_cli_practice.py  test_config.py  test_display.py  test_events.py  test_llm_coach.py  test_llm_provider.py  test_measure_beat.py  test_midi_io.py  test_parser_reference.py  test_playback.py  test_report_history.py  test_schemas.py  test_wait_mode.py
